# arxiv-agent

./: .env.example  .gitignore  LICENSE  PROJECT.md  README.md  STARTUP.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py
backend/src/agent/: paper_agent.py  tools.py
backend/src/api/: main.py
backend/src/cache/: redis_manager.py
backend/src/ingestion/: arxiv_fetcher.py  chunker.py  pdf_parser.py
backend/src/vectorstore/: embeddings.py  milvus_client.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentTrace.tsx  ChatPanel.tsx  PaperList.tsx  SearchBar.tsx
nginx/: nginx.conf
scripts/: health_check.py
tests/: eval_dataset.json
