[project]
name = "arxiv-agent-backend"
version = "0.1.0"
description = "Automated paper retrieval and analysis agent"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
    # Qwen / DashScope
    "dashscope>=1.20.0",
    # Milvus
    "pymilvus>=2.4.0",
    # Redis
    "redis>=5.0.0",
    "hiredis>=2.3.0",
    # ArXiv
    "arxiv>=2.1.0",
    # PDF parsing
    "pymupdf>=1.24.0",
    # FastAPI + async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    # HTTP client
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    # Utilities
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
